[~] rework unique identifier for photos and file because old didn't work well

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,3 +39,8 @@ services:
             - { name: 'doctrine.event_subscriber' }
 
     App\EventSubscriber\CalendarSubscriber:
+
+
+    App\EventListener\VichUploaderListener:
+        tags:
+            - { name: kernel.event_listener, event: vich_uploader.post_upload }
