[~] rework role creation on bureau to be more simple

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -17,8 +17,7 @@ easy_admin:
             - label: 'Histoire'
               children: ['HistoireClub', 'HistoirePresidents', 'HistoirePersonnalites', 'HistoireEnseignement']
             - { entity: 'Professeurs', label: 'Enseignants', icon: 'chalkboard-teacher' }
-            - label: 'Bureau'
-              children: ['Bureau', 'BureauRole']
+            - { entity: 'Bureau', icon: 'laptop-house' }
             - { entity: 'Dojo', icon: 'door-open' }
             - { label: 'Disciplines' }
             - { entity: 'JudoCours', icon: 'school' }
@@ -96,23 +95,16 @@ easy_admin:
                 fields:
                     - { property: 'nom', label: 'Nom', type: 'string' }
                     - { property: 'prenom', label: 'Prénom', type: 'string' }
-                    - { property: 'role.nom', label: 'Role' }
+                    - { property: 'role', label: 'Role', type: 'string' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
                     - { property: 'image', label: 'Image', type: 'image' , base_path: '%app.path.bureau_images%' }
             form:
                 fields:
                     - { property: 'nom', label: 'Nom' }
                     - { property: 'prenom', label: 'Prénom' }
-                    - { property: 'role', label: 'Role', type: 'entity', type_options: { choice_label: 'nom', required: true } }
+                    - { property: 'role', label: 'Role' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
                     - { property: 'imageFile', label: 'Image', type: 'vich_image', type_options: { allow_delete: false } }
-        BureauRole:
-            class: App\Entity\BureauRole
-            label: 'Role'
-            list:
-                fields:
-                    - { property: 'nom', type: 'string' }
-            form:
-                fields:
-                    - { property: 'nom' }
         Gallery:
             class: App\Entity\Gallery
             label: 'Galerie'
