--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -200,11 +200,13 @@ easy_admin:
                 fields:
                     - { property: 'categorie', label: 'Catégorie', type: 'string' }
                     - { property: 'annee', label: 'Année', type: 'string' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
                     - { property: 'texte', label: 'Texte', type: 'text' }
             form:
                 fields:
-                    - { property: 'categorie', label: 'Catégorie', type: 'choice', type_options: { choices: { Mini-Poussins: 'Mini-Poussins', Poussins: 'Poussins', Benjamins: 'Benjamins', Minimes: 'Minimes', Cadets: 'Cadets', Juniors: 'Juniors', Seniors: 'Seniors' } } }
+                    - { property: 'categorie', label: 'Catégorie' }
                     - { property: 'annee', label: 'Année' }
+                    - { property: 'ordre', label: 'Ordre', type: 'integer' }
                     - { property: 'texte', label: 'Texte', type: 'fos_ckeditor' }
         Competition:
             class: App\Entity\Competition
