--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -29,3 +29,6 @@ vich_uploader:
         fiche_inscription:
             uri_prefix: '%app.path.fiche_inscription%'
             upload_destination: '%kernel.project_dir%/public%app.path.fiche_inscription%'
+        boutique_fiche:
+            uri_prefix: '%app.path.boutique_fiche%'
+            upload_destination: '%kernel.project_dir%/public%app.path.boutique_fiche%'
