--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,7 @@ parameters:
     app.path.passage_grades_images: /uploads/passage_grades
     app.path.fiche_inscription: /uploads/fiche
     app.path.boutique_fiche: /uploads/boutique_fiche
+    app.path.documents_utiles: /uploads/documents_utiles
 
 services:
     # default configuration for services in *this* file
